Add inputs and other functionality

--- a/templates/posts.hbs
+++ b/templates/posts.hbs
@@ -1,7 +1,12 @@
 <div class='col-xs-6'>
+  <form>
+    {{input id="user" class="form-control" placeholder="User Name"}}
+    {{input id="tweet" class="form-control" placeholder="Tweet!"}}
+    <button class="btn btn-info" {{action 'save'}}>¡Tweet!</button>
+  </form>
   <ul>
     {{#each}}
-      <li>{{tweet}}</li>
+      <li>{{user}}: {{tweet}} {{time}}m</li>
     {{/each}}
   </ul>
 </div>
