Add a model to store tweets

--- a/templates/posts.hbs
+++ b/templates/posts.hbs
@@ -1,7 +1,7 @@
 <div class='col-xs-6'>
   <form>
-    {{input id="user" class="form-control" placeholder="User Name"}}
-    {{input id="tweet" class="form-control" placeholder="Tweet!"}}
+    {{input id="user" class="form-control" value=user placeholder="User Name"}}
+    {{input id="tweet" class="form-control" value=tweet placeholder="Tweet!"}}
     <button class="btn btn-info" {{action 'save'}}>¡Tweet!</button>
   </form>
   <ul>
