--- a/templates/application.hbs
+++ b/templates/application.hbs
@@ -1,10 +1,7 @@
 <div class="container">
   <nav class='navbar navbar-default' role='navigation'>
-    <ul class='nav navbar-nav'>
-      <li>{{#link-to 'posts'}}Home{{/link-to}}</li>
-    </ul>
-    <ul class='nav navbar-nav navbar-right'>
-      <!--  search input -->
+    <ul class='nav navbar-nav center'>
+      <li>{{#link-to 'posts'}}<img src="css/social-32-twitter.png">{{/link-to}}</li>
     </ul>
   </nav>
   <div class='row'>
