--- a/css/styles.css
+++ b/css/styles.css
@@ -10,17 +10,19 @@ h2 {
     font-family: "trebuchet ms", sans-serif;
 }
 
-.image:hover {
-  border: 4px solid red;
-}
-
-.navbar-right {
-  padding-right: 10px;
-}
-
 .center {
   text-align: center;
+  margin: 0 auto;
 }
+
+nav {text-align: center;}
+
+.center {
+  display: inline-block;
+  float: none;
+  vertical-align: top;
+}
+
 
 .item {
     background: #333;
